--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,7 @@ body {
 
 #app {
   max-width: 1280px;
+  min-height: 100%;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
@@ -36,30 +37,4 @@ a {
 a:hover {
   background-color: rgba(255, 255, 255, 0.2);
   /* Cambia el color de fondo al pasar el ratón */
-}
-
-@media (min-width: 1024px) {
-
-  #app {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    /* Crea una cuadrícula responsiva */
-    gap: 2rem;
-    /* Espacio entre los botones */
-    padding: 0 2rem;
-    align-items: start;
-    /* Alinea los botones al inicio del contenedor */
-    justify-content: center;
-    /* Centra los botones horizontalmente */
-    align-content: center;
-    /* Centra los botones verticalmente */
-    grid-auto-flow: dense;
-    /* Permite que los elementos ocupen espacios vacíos en la cuadrícula */
-
-  }
-
-
-
-
-
 }
